style.css
* {
    font-family: "Roboto", sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.container {
    display: grid;
    grid-template: 1fr 5fr / 1fr 4fr;
}


header {
    grid-column: 2 / 5;
    grid-row: 1/2;
    padding-left: 20px;
}

.sidebar {
    grid-row: 1 / 5;
    background-color: rgb(91, 91, 223);
    color: white;
    
}

h1 {
    font-size: 2rem;
}

.logo {
    display: flex;
    gap: 10px;
    align-items: center;
    justify-content: flex-start;
    padding: 20px;
    margin-bottom: 20px;
}

.logo img {
    width: 50px;
}

.sidebar li {
    display: flex;
    align-items: center;
    list-style: none;
    font-weight: 500;
    font-size: 1.4rem;

    margin-bottom: 15px;
    padding-left: 20px;
}

.sidebar li:hover {
    color: rgb(171, 178, 236);
    cursor: pointer;
}

.menu img {
    width: 40px;
    padding-right: 20px;
}

.menu1 {
    margin-bottom: 40px;
}

.first-line {
    display: grid;
    grid-template-columns: 2fr 1fr;
    padding-top: 20px;
    gap: 15px;
}

.first-line img {
    width: 30px;
}

.first-line img:hover {
    opacity: .5;
    cursor: pointer;
}

.searching {
    padding: 10px;
    display: flex;
    align-items: center;
    gap: 15px;
}

.first-line input {
    border-radius: 15px;
    background-color: aliceblue;
    border: 1px solid rgb(201, 200, 200);
    padding: 5px;
    width: max(100px, 60%);
}

.first-line input:focus {
    border: 1px solid rgb(91, 91, 223);
    outline: none;
}

.user {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding-right: 20px;
    gap: 20px;

    font-weight: 500;
}

.user-picture {
    background-color: rgb(91, 91, 223);
    border-radius: 30px;
    padding: 5px;
}

.user:hover {
    color: rgb(91, 91, 223);
    cursor: pointer;
}

.second-line {
    display: grid;
    grid-template-columns: 2fr 1fr;
    align-items: center;
    justify-items: center;
}

.welcome {
    justify-self: flex-start;
    display: flex;
    gap: 15px;
    justify-content: flex-start;
    align-items: center;
    padding: 15px;
}

.welcome img {
    width: 40px;
}

.welcome p {
    font-weight: 400;
    font-size: 0.9rem;
}

.second-line li {
    list-style: none;
}

.nav ul {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 15px;
    margin: 10px;
}

.nav li {
    background-color: rgb(91, 91, 223);
    border: 1px solid rgb(91, 91, 223);
    color: white;
    text-align: center;
    border-radius: 15px;
    padding: 8px 30px;
}

.nav li:hover {
    background-color: rgb(252, 252, 252);
    color: rgb(14, 13, 13);
    border: 1px solid rgb(91, 91, 223);
    cursor: pointer;
}

.content {
    display: grid;
    grid-template-columns: 2.7fr 1.3fr;
    background-color: rgb(217, 235, 252);
}

.projects {
    grid-column: 1/2;
    grid-row: 1/3;

    display: grid;
    grid-template-rows: 0.3fr 5fr;
    padding: 20px;
}

.right-sidebar {
    display: grid;
    grid-template-rows: 1fr 1fr;
}

.projects h3 {
    grid-row: 1/2;
    padding-top: 10px;
    padding-left: 10px;
    padding-bottom: 20px;
}

.articles {
    grid-row: 2/3;

    display: grid;
    grid-template-rows: max(210px, 1fr) max(210px, 1fr) max(210px, 1fr);
    grid-template-columns: 1fr 1fr;
    gap: 20px;
}

.announcements {
    grid-row: 1/2;
    padding: 20px;
    padding-right: 30px;
}

.trending {
    grid-row: 2/3;
    padding: 20px;
    padding-right: 30px;
}

.announcements h3, .trending h3 {
    padding: 10px;
    padding-bottom: 20px;
}

.card {
    max-width: 450px;
    max-height: 250px;
    padding: 25px;

    background-color: white;
    border-left: 5px solid rgb(255, 115, 0);
    box-shadow: 2px 2px 10px rgb(201, 200, 200);
    border-radius: 15px;
}

h4 {
    padding-bottom: 10px;
    font-size: 1.05rem;
}

.project-options {
    justify-self: flex-end;
    align-self: flex-end;
    margin-top: 20px;
    
}

.card:hover {
    background-color: rgba(240, 240, 240, 0.658);
    cursor: pointer;
}

.card img {
    width: 25px;
    margin-left: 10px;
}

.card img:hover {
    opacity: .5;
    cursor: pointer;
}

.card p {
    font-weight: 300;
    font-size: 0.9rem;
}

.announcements-block {
    background-color: white;
    padding: 25px;
    box-shadow: 2px 2px 10px rgb(201, 200, 200);
    border-radius: 15px;
}

.ann-title {
    padding-bottom: 5px;
    font-size: 1rem;
    font-weight: 600;
}

.announcements p {
    font-weight: 300;
    font-size: 0.85rem;
    padding-bottom: 10px;
    border-bottom: 0.2px solid rgb(255, 115, 0);
    margin-bottom: 10px;
}

.last-ann p {
    border-bottom: none;
    padding-bottom: 0px;
    margin-bottom: 0px;
}

.tag-block {
    background-color: white;
    padding: 15px;
    box-shadow: 2px 2px 10px rgb(201, 200, 200);
    border-radius: 15px;

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));;
}

.tags {
    display: grid;
    grid-template-columns: 1fr 3fr;
    gap: 15px;
    align-items: center;
   
    margin-bottom: 10px;
    margin-top: 10px;
}

.trending img {
    width: min(8vw, 40px);
    grid-column: 1/2;
    justify-self: flex-end;
}

.trending-text {
    grid-column: 2/3;
}

.trending-title {
    font-weight: 600;
    font-size: 1rem;
    margin-bottom: 5px;
}

.tagline {
    font-weight: 300;
    font-size: 0.8rem;
}

